Improved blast panel with accordion feature hit/query sequence results qTip-based feature tooltip with goto button that raises blast panel.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Fuel UX -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">    
+    <link type="text/css" rel="stylesheet" href="src/qTip/jquery.qtip.css" />
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -16,8 +17,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>    
     <script src="//www.fuelcdn.com/fuelux-utilities/1.0.0/js/fuelux-utilities.min.js"></script>    
     -->
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <!-- Include all compiled plugins (below), or include indi vidual files as needed -->
 
+    <script type="text/javascript" src="src/qTip/jquery.qtip.js"></script>    
+    
     <script type="text/javascript" src="//192.168.56.102:1337/js/dependencies/sails.io.js"></script>
    
     <link href="//code.jquery.com/ui/1.11.4/themes/cupertino/jquery-ui.css" rel="stylesheet">
