--- a/plugins/GalaxyBlaster/BlastPanel.html
+++ b/plugins/GalaxyBlaster/BlastPanel.html
@@ -212,7 +212,7 @@
             <div class="row" style="padding-left: 10px;padding-top: 5px;">
               <div class="col-lg-6">
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="BLAST Filter...">
+                  <input id="blast-filter-input" type="text" class="form-control" placeholder="BLAST Filter...">
                   <span class="input-group-btn">
                     <button id="blast-filter-go" class="btn btn-secondary" type="button">Go</button>
                   </span>
