add global jbServer

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
         }
     </style>
     <script>
+        var jbServer = 'http://192.168.56.102:1337';
+        
         $(document).ready(function() {
             
 
