add jquery ui and slider pips

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <title>JBrowse</title>
     <link rel="stylesheet" type="text/css" href="css/genome.css">
     <!-- Fuel UX -->
+    <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">    
     <link type="text/css" rel="stylesheet" href="src/qTip/jquery.qtip.css" />
+    <link type="text/css" rel="stylesheet" href="src/slideer-pips/dist/jquery-ui-slider-pips.min.css" />
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="//www.fuelcdn.com/fuelux/3.13.0/js/fuelux.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <!-- not sure if these are required -->
     <!--
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>    
@@ -20,6 +23,7 @@
     <!-- Include all compiled plugins (below), or include indi vidual files as needed -->
 
     <script type="text/javascript" src="src/qTip/jquery.qtip.js"></script>    
+    <script type="text/javascript" src="src/slider-pips/dist/jquery-ui-slider-pips.min.js"></script>    
     
     <script type="text/javascript" src="//192.168.56.102:1337/js/dependencies/sails.io.js"></script>
    
