Add support for Slider-Pips and dynamic feature filtering.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">    
     <link type="text/css" rel="stylesheet" href="src/qTip/jquery.qtip.css" />
-    <link type="text/css" rel="stylesheet" href="src/slideer-pips/dist/jquery-ui-slider-pips.min.css" />
+    <link type="text/css" rel="stylesheet" href="src/slider-pips/dist/jquery-ui-slider-pips.min.css" />
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -215,7 +215,7 @@
     <div id="GenomeBrowser" style="height: 100%; width: 100%; padding: 0; border: 0;"></div>
     <div style="display: none">JBrowseDefaultMainPage</div>
     <!--div id="extruderLeft" class="{title:'Galaxy ', url:'plugins/GalaxyBlaster/historytable.html'}"></div-->
-    <div id="blastPanel" class="{title:'BLAST ', url:'plugins/GalaxyBlaster/BlastPanel.html'}"></div>
+    <div id="blastPanel" class="{title:'Galaxy BLAST', url:'plugins/GalaxyBlaster/BlastPanel.html'}"></div>
     <!--div id="blastFilterPanel" class="{title:'BLAST ', url:'plugins/GalaxyBlaster/BlastFilterPanel.html'}"></div-->
   </body>
 </html>
