--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <title>JBrowse</title>
     <link rel="stylesheet" type="text/css" href="css/genome.css">
     <!-- Fuel UX -->
-    <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet">
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//www.fuelcdn.com/fuelux/3.13.0/css/fuelux.min.css" rel="stylesheet">    
+    <link href="templib/jquery-ui-smoothness.css" rel="stylesheet">
+    <link href="templib/bootstrap.min.css" rel="stylesheet">
+    <link href="templib/fuelux.min.css" rel="stylesheet">    
     <link type="text/css" rel="stylesheet" href="src/qTip/jquery.qtip.css" />
     <link type="text/css" rel="stylesheet" href="src/slider-pips/dist/jquery-ui-slider-pips.min.css" />
     
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="//www.fuelcdn.com/fuelux/3.13.0/js/fuelux.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="templib/jquery-1.11.0.js"></script>
+    <script src="templib/bootstrap.min.js"></script>
+    <script src="templib/fuelux.min.js"></script>
+    <script src="templib/jquery-ui-1.11.4.min.js"></script>
     <!-- not sure if these are required -->
     <!--
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>    
@@ -27,7 +27,7 @@
     
     <script type="text/javascript" src="//192.168.56.102:1337/js/dependencies/sails.io.js"></script>
    
-    <link href="//code.jquery.com/ui/1.11.4/themes/cupertino/jquery-ui.css" rel="stylesheet">
+    <!--link href="//code.jquery.com/ui/1.11.4/themes/cupertino/jquery-ui.css" rel="stylesheet"-->
 
     <link href="src/mb.extruder/css/mbExtruder.css" media="all" rel="stylesheet" type="text/css">
 
