change the History tab back to "Galaxy"

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   <body class="fuelux">
     <div id="GenomeBrowser" style="height: 100%; width: 100%; padding: 0; border: 0;"></div>
     <div style="display: none">JBrowseDefaultMainPage</div>
-    <div id="extruderLeft" class="{title:'History ', url:'plugins/GalaxyBlaster/HistoryPanel.html'}"></div>
+    <div id="extruderLeft" class="{title:'Galaxy ', url:'plugins/GalaxyBlaster/HistoryPanel.html'}"></div>
     <div id="blastPanel" class="{title:'BLAST Results', url:'plugins/GalaxyBlaster/BlastPanel.html'}"></div>
     <!--div id="blastFilterPanel" class="{title:'BLAST ', url:'plugins/GalaxyBlaster/BlastFilterPanel.html'}"></div-->
   </body>
