change some text names

--- a/plugins/GalaxyBlaster/BlastPanel.html
+++ b/plugins/GalaxyBlaster/BlastPanel.html
@@ -279,7 +279,7 @@
     <div style="display:none">
                 <div id="blast-filter-group" class="input-group blast-filter-group" style="display:none">
                     <div class="blast-slider-title">
-                        <h2 class="title">BLAST Filter</h2>
+                        <h2 class="title">Blast Filter</h2>
                         <button id="blast-filter-close-btn" style="float:right;" class="btn btn-primary">-</button>  
                     </div>
                     <div class="blast-filter-sliders">
