add some todo comments

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>JBrowse</title>
     <link rel="stylesheet" type="text/css" href="css/genome.css">
+    <!-- todo: AMDize these plugins -->
     <!-- Fuel UX -->
     <link href="templib/jquery-ui-smoothness.css" rel="stylesheet">
     <link href="templib/bootstrap.min.css" rel="stylesheet">
