remove redundant css reference

--- a/plugins/GalaxyBlaster/HistoryPanel.html
+++ b/plugins/GalaxyBlaster/HistoryPanel.html
@@ -16,7 +16,7 @@
             left: -7px;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="css/CSSTableGenerator.css">
+    <!--link rel="stylesheet" type="text/css" href="css/CSSTableGenerator.css"-->
 
     <script type="text/javascript">
         // fix position of flap
