--- a/plugins/GalaxyBlaster/BlastPanel.html
+++ b/plugins/GalaxyBlaster/BlastPanel.html
@@ -29,7 +29,7 @@
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:0px 0px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
         .tg .tg-yw4l{vertical-align:top}
     </style>
-    <link rel="stylesheet" type="text/css" href="css/CSSTableGenerator.css">
+    <!--link rel="stylesheet" type="text/css" href="css/CSSTableGenerator.css"-->
     
     <script type="text/javascript">
         // fix position of flap
