--- a/plugins/JBlast/BlastPanel.html
+++ b/plugins/JBlast/BlastPanel.html
@@ -80,7 +80,7 @@
 
             console.log("Load History");
             $.ajax({
-                url: "http://192.168.56.102:1337/api/jobs/0..10000",
+                url: jbServer+"/api/jobs/0..10000",
                 dataType: "text",
                 success: function (data) {
                   callback(data);
