remove BlastPanel.html dependency. remove "Blast Hits" tab. implement dynamic loading of BlastFilterPanel.html, which now contains the blast panel markup.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div id="GenomeBrowser" style="height: 100%; width: 100%; padding: 0; border: 0;"></div>
     <div style="display: none">JBrowseDefaultMainPage</div>
     <div id="extruderLeft" class="{title:'Galaxy ', url:'plugins/JBlast/HistoryPanel.html'}"></div>
-    <div id="blastPanel" class="{title:'Blast Hits', url:'plugins/JBlast/BlastPanel.html'}"></div>
+    <!--div id="blastPanel" class="{title:'Blast Hits', url:'plugins/JBlast/BlastPanel.html'}"></div-->
     <!--div id="blastFilterPanel" class="{title:'BLAST ', url:'plugins/GalaxyBlaster/BlastFilterPanel.html'}"></div-->
   </body>
 </html>
