--- a/plugins/JBlast/BlastFilterPanel.html
+++ b/plugins/JBlast/BlastFilterPanel.html
@@ -1,16 +1,38 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+    <div style="display:none">
+                <div id="blast-filter-group" class="input-group blast-filter-group" style="display:none">
+                    <div class="blast-slider-title">
+                        <h2 class="title">Blast Filter</h2>
+                        <button id="blast-filter-close-btn" style="float:right;" class="btn btn-primary">-</button>  
+                    </div>
+                    <table class="blast-filter-sliders" style="width:100%;cellpadding:10px">
+                        <tr>
+                            <td colspan="2" class="blast-slider-label">Score</td>
+                        </tr>
+                        <tr>
+                            <td class="blast-slider-item"><div id="slider-score"></td>
+                            <td class="blast-slider-item-c2"><div id="slider-score-data" class="blast-slider-item-data panel panel-default panel-body">Blah</div></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="blast-slider-label">E-Value</td>
+                        </tr>
+                        <tr>
+                            <td class="blast-slider-item"><div id="slider-evalue"></td>
+                            <td class="blast-slider-item-c2"><div id="slider-evalue-data" class="blast-slider-item-data panel panel-default panel-body">Blah</div></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="blast-slider-label">Identity</td>
+                        </tr>
+                        <tr>
+                            <td class="blast-slider-item"><div id="slider-identity"></td>
+                            <td class="blast-slider-item-c2"><div id="slider-identity-data" class="blast-slider-item-data panel panel-default panel-body">Blah</div></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="blast-slider-label">Gaps</td>
+                        </tr>
+                        <tr>
+                            <td class="blast-slider-item"><div id="slider-gap"></td>
+                            <td class="blast-slider-item-c2"><div id="slider-gap-data" class="blast-slider-item-data panel panel-default panel-body">Blah</div></td>
+                        </tr>
+                    </table>
+                </div>
+    </div>
