remove obsolete code

--- a/plugins/JBlast/BlastPanel.html
+++ b/plugins/JBlast/BlastPanel.html
@@ -7,22 +7,6 @@
 <script type="text/javascript" src="plugins/JBlast/js/node_modules/jquery.mb.extruder/inc/jquery.hoverIntent.min.js"></script>
 <script type="text/javascript" src="plugins/JBlast/js/node_modules/jquery.mb.extruder/inc/jquery.mb.flipText.js"></script>
 <script type="text/javascript" src="plugins/JBlast/js/node_modules/jquery.mb.extruder/inc/mbExtruder.js"></script>
-<!--
-<link type="text/css" rel="stylesheet" href="src/slider-pips/dist/jquery-ui-slider-pips.min.css" />
-<script type="text/javascript" src="src/slider-pips/dist/jquery-ui-slider-pips.min.js"></script>    
-
-<link href="src/mb.extruder/css/mbExtruder.css" media="all" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="src/mb.extruder/inc/jquery.hoverIntent.min.js"></script>
-<script type="text/javascript" src="src/mb.extruder/inc/jquery.mb.flipText.js"></script>
-<script type="text/javascript" src="src/mb.extruder/inc/mbExtruder.js"></script>
--->
-<script>
-
-    // setup extruder sidebar
-    if (self.location.href == top.location.href){
-        $("body").css({font:"normal 13px/16px 'trebuchet MS', verdana, sans-serif"});
-    }
-</script>
     
 <script type="text/javascript">
     //adjust grid height
@@ -192,4 +176,4 @@
         </div>
     </div>
 
-<div id="extruderLeft" class="{title:'Galaxy ', url:'plugins/JBlast/HistoryPanel.html'}"></div>
+<div id="extruderRight" class="{title:'Jobs ', url:'plugins/JBlast/HistoryPanel.html'}"></div>
