migrate job code into HistoryPanel.html

--- a/plugins/JBlast/HistoryPanel.html
+++ b/plugins/JBlast/HistoryPanel.html
@@ -2,6 +2,93 @@
 <html>
 <body>
     
+<script type="text/javascript">
+    //adjust grid height
+    var jbServer = "";
+
+    setInterval(function() {
+        var h = $("#blastPanel div.extruder-content").height();
+        var w = $('.tg-yw4l').width();
+        //$("#j-hist-grid").height(h);
+        $("#j-blast").height(h-12);
+        $('#j-blast').width(w-19);
+    },1000);
+
+    setTimeout(function(){
+        $('.extruder-container').css('height','350px');     // for some reason, we must do this, why?
+        doGetJobs();
+    },3000);
+
+
+    function doGetJobs() {
+        getJobs(function(data){
+            jdata = $.parseJSON(data);
+
+            //console.dir(jdata);
+
+            // filter type: galaxy-job
+            //console.log("jdata len",jdata.length);
+            var i = jdata.length;
+            while(i--) {
+                if (jdata[i].type!=='galaxy-job')
+                    jdata.splice(i, 1);    
+            }
+            //console.log("jdata len",jdata.length);
+
+            jdata.sort(function(a,b) {
+                if (a.data.galaxy_data.hid > b.data.galaxy_data.hid) return -1;
+                if (a.data.galaxy_data.hid < b.data.galaxy_data.hid) return 1;
+                else return 0;
+            });
+
+            for (var x in jdata) {
+                // filter out non galaxy-job type
+                if (jdata[x].type === 'galaxy-job') {
+
+                    $("#j-hist-grid table").append("<tr id='"+jdata[x].id+"'><td class='state'>"
+                        +getJobState(jdata[x].data.galaxy_data.state)+"</td><td>"
+                        +jdata[x].data.galaxy_data.hid+"</td><td>"+jdata[x].data.galaxy_data.name+"</td></tr>");
+                }
+            }
+
+        });
+    };
+
+
+    function getJobs(callback) {
+
+        console.log("Load History");
+        $.ajax({
+            url: jbServer+"/api/jobs/0..10000",
+            dataType: "text",
+            success: function (data) {
+              callback(data);
+            }
+            // todo: handle errors
+        });
+    };
+
+    // convert state info image or text
+
+    function getJobState(state){
+        switch(state) {
+            case "running":
+                $("img.cogwheel").removeClass("hidden");        // turn on the tab progress cog
+                return "<img style='width:20px' src='img/st_processing.gif' />";
+            case "ok":
+                return "<img style='width:20px' src='img/st_green_check.png' />";
+            case "error":
+                return "<img style='width:20px' src='img/st_red_x.png' />";
+            case "queued":
+            case "new":
+                return "<span style='color:green;font-weight:bold'>"+state+"</span>";
+            default:
+                return state;
+        }
+    }
+
+</script>
+
     <div id="j-hist-grid">
         <div class="CSSTableGenerator" >
                 <table >
