--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <link rel="stylesheet" type="text/css" href="css/genome.css">
     <!-- todo: AMDize these plugins -->
     <!-- Fuel UX -->
-    <link href="src/templib/jquery-ui-smoothness.css" rel="stylesheet">
-    <link href="src/templib/bootstrap.min.css" rel="stylesheet">
-    <link href="src/templib/fuelux.min.css" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="src/qTip/jquery.qtip.css" />
+    <!--link href="src/templib/jquery-ui-smoothness.css" rel="stylesheet"-->
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!--link href="src/templib/fuelux.min.css" rel="stylesheet"-->
     
-    <script src="src/templib/jquery-1.11.0.js"></script>
-    <script src="src/templib/jquery-ui-1.11.4.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="src/qTip/jquery.qtip.css" />
+
+    <link type="text/css" rel="stylesheet" href="/jquery-ui/jquery-ui.min.css" />
+    <link type="text/css" rel="stylesheet" href="/jquery-ui/jquery-ui.structure.min.css" />
+    <link type="text/css" rel="stylesheet" href="/jquery-ui/jquery-ui.theme.min.css" />
+    
+    <script src="/jquery/jquery.js"></script>
+    <script src="/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
 
     <!--script type="text/javascript" src="src/qTip/jquery.qtip.js"></script>        <script type="text/javascript">
         // for cross origin sails server access
